
New features
~~~~~~~~~~~~
  - Option to construct Laplacian with rows and columns in specified order
  - Option in convert_node_labels_to_integers to use sorted order   
  - predecessor(G,n) function that returns dictionary of
    nodes with predecessors from breadth-first search of G 
    starting at node n.
    https://networkx.lanl.gov/wiki/ticket/26

Examples
~~~~~~~~
  - Formation of giant component in binomial_graph
    https://networkx.lanl.gov/wiki/file/networkx/trunk/doc/examples/binomial_giant.py
  - Gallery https://networkx.lanl.gov/wiki/wiki/gallery
  
Bug fixes
~~~~~~~~~
  - Adjusted names for random graphs.
     + erdos_renyi_graph=binomial_graph=gnp_graph: n nodes with 
       edge probability p
     + gnm_graph: n nodes and m edges
     + fast_gnp_random_graph: gnp for sparse graphs (small p)   

  - Documentation contains correct spelling of Barabási, Bollobás,
    Erdős, and Rényi in UTF-8 encoding
  - Increased speed of connected_components and related functions
    by using faster BFS algorithm in networkx.paths
    https://networkx.lanl.gov/wiki/ticket/27     

What's new in NX-0.27?
----------------------

Release date: 5 February 2006

See: https://networkx.lanl.gov/wiki/timeline

New features
~~~~~~~~~~~~
  - sparse_binomial_graph: faster graph generator for sparse random graphs
  - read/write routines in io.py now handle XGraph() type and
    gzip and bzip2 files
  - optional mapping of type for read/write routine to allow
    on-the-fly conversion of node and edge datatype on read
  - Substantial changes related to digraphs and definitions of
    neighbors() and edges().  For digraphs edges=out_edges.
    Neighbors now returns a list of neighboring nodes with
    possible duplicates for graphs with parallel edges
    See https://networkx.lanl.gov/wiki/ticket/24
  - Addition of out_edges, in_edges and corresponding out_neighbors
    and in_neighbors for digraphs.  For digraphs edges=out_edges.
   
Examples
~~~~~~~~